@@ -2,6 +2,7 @@ require 'cairo/context/quad'
 require 'cairo/context/rectangle'
 require 'cairo/context/circle'
 require 'cairo/context/path'
+require 'cairo/context/blur'
 
 module Cairo
   class Context
@@ -9,5 +10,6 @@ module Cairo
     include Rectangle
     include Circle
     include Path
+    include Blur
   end
 end
